--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Website</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Hello World!!</h1>
