--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Website</title>
+    <title>JustWorks Marketplace</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Hello World!!</h1>
+    <h1>Hello, Justworkers!</h1>
 </body>
 </html>
